# nt8-fastapi-server

./: README.md  main.py  pyproject.toml
src/nt8_data_analysis/: __init__.py  config.py  data_processor.py  functional_processor.py  main.py  models.py
