[project]
name = "nt8-data-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.3,<3.0.0",
    "fastapi>=0.115.12",
    "ta>=0.11.0",
    "hurst>=0.0.5",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
